# kcommonhpp

./: .gitignore  CMakeLists.txt  CodeFormat.h  Coroutine.h  DateTimeAssist.h  FileAssist.h  FileLock.h  GenerateDumpInfo.h  LogWrapper.h  ProducerConsumerTemplate.h  ProgramLock.h  README.md  SpdLogWrapper.h  ThreadAssist.h  cstandard.h  kcommon.h  kcommonfunction.h  kfile.h  ktime.h  ktimer.h  macrotostring.h  numbertostring.h  qstandard.h  qtstandard.h
KCommonhppTest/: KCommonhppTest.sln  KCommonhppTest.vcxproj  KCommonhppTest.vcxproj.filters  main.cpp
kprojecthpp/: kerrorcode.h  kevent.h  kmacro.h  kqtdialog.h  kqttitlebar.h  kqtuistyle.h  macrotostring.h
opensource/spdlog-1.x/include/spdlog/sinks/: daily_file_sink.h
